--- a/merit_bank1/src/components/counter/Counter.css
+++ b/merit_bank1/src/components/counter/Counter.css
@@ -1,7 +1,10 @@
+/*
 button {
-    background-color: green;
+    background-color: blueviolet;
     font-size: 16px;
     padding: 15px 30px;
+    
+    margin: 10px 10px;
     color: white;
     width: 100px;
 }
@@ -16,3 +19,4 @@ button {
    
     width: 200px;
 }
+*/
