--- a/merit_bank1/src/App.css
+++ b/merit_bank1/src/App.css
@@ -44,3 +44,13 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  background-color: blueviolet;
+  font-size: 16px;
+  padding: 15px 30px;
+  
+  margin: 10px 10px;
+  color: white;
+  width: 200px;
+}
